== master

* Generate warnings when conflicting state / event names are detected
* Allow fallback to generic state predicates when individual predicates are already defined in the owner class
* Replace :include_failures after_transition option with new after_failure callback
* Provide access to transition context when raising InvalidEvent / InvalidTransition exceptions

== 0.9.4 / 2010-08-01

* Fix validation / save hooks in Sequel 3.14.0+
* Fix integration with dirty attribute tracking on DataMapper 1.0.1+
* Fix DataMapper 1.0.1+ tests producing warnings
* Fix validation error warnings in ActiveModel / ActiveRecord 3.0.0 beta5+
* Fix mass-assignment sanitization breaking in ActiveRecord 3.0.0 beta5+ [Akira Matsuda]

== 0.9.3 / 2010-06-26

* Allow access to human state / event names in transitions and for the current state
* Use human state / event names in error messages
* Fix event names being used inconsistently in error messages
* Allow access to the humanized version of state / event names via human_state_name / human_state_event_name
* Allow MongoMapper 0.8.0+ scopes to be chainable
* Fix i18n deprecation warnings in ActiveModel / ActiveRecord 3.0.0.beta4
* Fix default error message translations overriding existing locales in ActiveModel / ActiveRecord

== 0.9.2 / 2010-05-24

* Fix MongoMapper integration failing in Ruby 1.9.2
* Fix Rakefile not loading in Ruby 1.9.2 [Andrea Longhi]
* Fix nil / false :integration configuration not being respected

== 0.9.1 / 2010-05-02

* Fix ActiveRecord 2.0.0 - 2.2.3 integrations failing if version info isn't already loaded
* Fix integration with dirty attribute tracking on DataMapper 0.10.3
* Fix observers failing in ActiveRecord 3.0.0.beta4+ integrations
* Fix deprecation warning in Rails 3 railtie [Chris Yuan]

== 0.9.0 / 2010-04-12

* Use attribute-based event transitions whenever possible to ensure consistency
* Fix action helpers being defined when the action is *only* defined in the machine's owner class